[tool.poetry]
name = 'pytest-common-subject'
version = '1.0.0'
description = 'pytest framework for testing different aspects of a common method'
license = 'MIT'

authors = [
    'Zach "theY4Kman" Kanzler <z@perchsecurity.com>'
]

readme = 'README.md'

repository = 'https://github.com/usePF/pytest-common-subject'
homepage = 'https://github.com/usePF/pytest-common-subject'

keywords = ['pytest']


[tool.poetry.dependencies]
# Typing annotations are used
# XXX: for whatever reason, poetry doesn't like `>=3.6` — the additional pin allows locking to work
python = '^3.6, >= 3.6'

pytest = '>=3.6, <4.6'
pytest-lambda = '>=0.1.0'
pytest-fixture-order = '0.1.1'
lazy-object-proxy = '^1.3.1'


[tool.poetry.dev-dependencies]
tox = "^3.12"


[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
