[tool.poetry]
name = 'pytest-common-subject'
version = "1.0.6"
description = 'pytest framework for testing different aspects of a common method'
license = 'MIT'

authors = [
    'Zach "theY4Kman" Kanzler <they4kman@gmail.com>'
]

readme = 'README.md'
packages = [
    { include = "pytest_common_subject" },
    { include = "pytest.ini", format = "sdist" },
    { include = "tox.ini", format = "sdist" },
    { include = "tests", format = "sdist" },
    { include = "LICENSE", format = "sdist" },
    { include = "CHANGELOG.md", format = "sdist" },
]

repository = 'https://github.com/theY4Kman/pytest-common-subject'
homepage = 'https://github.com/theY4Kman/pytest-common-subject'

keywords = ['pytest']


[tool.poetry.dependencies]
python = '^3.8'

pytest = '>=3.6, <9'
pytest-lambda = '>=1.3.0'
pytest-fixture-order = '^0.1.2'
lazy-object-proxy = '^1.3.1'


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
tox = "^3.12"


[tool.poetry.plugins."pytest11"]
common_subject = "pytest_common_subject.plugin"


[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
